# mapi

./: docker-compose.yml
project/: Dockerfile  pyproject.toml
project/app/: db.py  main.py  models.py
