[tool.poetry]
name = "mapi"
version = "0.1.0"
description = ""
authors = ["Heimu"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
psycopg2-binary = "^2.9.5"
strawberry-graphql = {extras = ["fastapi"], version = "^0.140.0"}
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
